feat: improve release readiness
